强引用为默认引用